Replace use of FileUtils with standard methods